2005-11-08  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (model_fill_date_iter),
	(logview_add_new_log_lines), (logview_create_model_no_date),
	(logview_create_model), (log_repaint):
	* logrtns.c: (log_open), (log_add_lines), (log_read_new_lines),
	(log_close):
	* logrtns.h:
	* logview-findbar.c: (iter_is_visible),
	(logview_findbar_entry_timeout),
	(logview_findbar_entry_changed_cb):
	* logview.c: (logview_select_log),
	(logview_update_findbar_visibility), (logview_close_log),
	(logview_copy), (logview_init): Remove the column headers and just
	display the line as it appears in the log. The functionality stays
	the same, for a big code simplification and speedup.

2005-11-07  Vincent Noel <vnoel@cox.net>

	* logview-findbar.c: (iter_is_visible), (logview_findbar_clear),
	(logview_findbar_entry_changed_cb), (logview_findbar_grab_focus),
	(logview_findbar_connect), (logview_findbar_init),
	(logview_findbar_class_init), (logview_findbar_get_type),
	(logview_findbar_new):
	* logview-findbar.h:
	* logview.c: (logview_update_findbar_visibility), (logview_search),
	(logview_init): Make the findbar its own widget.

2005-11-07  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (logview_show_model):
	* logrtns.c: (log_open):
	* logrtns.h:
	* logview-findbar.c: (iter_is_visible), (logview_findbar_clear),
	(logview_findbar_entry_changed_cb), (logview_findbar_new):
	Change how the filter works : don't clear filter on focus-out, add
	a "Clear" button.

2005-11-04  Vincent Noel <vnoel@cox.net>

	* log_repaint.c: (model_fill_date_iter):
	* logview-findbar.c: (iter_is_visible),
	(logview_findbar_entry_changed_cb), (logview_findbar_hide),
	(logview_findbar_new):
	* logview.c: (logview_init):
	* logview.h: Remove the whole Find bar mess (which never worked
	well anyway) with a nice and fast filter.

2005-11-04  Vincent Noel  <vnoel@cox.net>

	* logview.c: (logview_add_logs_from_names), (logview_save_prefs),
	(logview_destroy), (logview_version_selector_changed),